--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "Nest TypeScript starter repository",
   "license": "MIT",
   "scripts": {
-    "build": "nest build",
+    "build": "run-s build:tailwind:prod build:nest",
+    "build:nest": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -16,7 +17,10 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "build:tailwind:dev": "npx tailwindcss -i ./styles/input.css -o ./public/output.css --watch",
+    "build:tailwind:prod": "npx tailwindcss -i ./styles/input.css -o ./public/output.css",
+    "dev": "run-p build:tailwind:dev start:debug"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
@@ -40,9 +44,11 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^28.1.2",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.2.4",
+    "tailwind": "^4.0.0",
     "ts-jest": "^28.0.5",
     "ts-loader": "^9.3.1",
     "ts-node": "^10.8.2",
