cloud runだとstart runだと思うのでstart runでprodになるように

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "run-s build:tailwind:prod build:nest",
     "build:nest": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
+    "start": "yarn start:prod",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
