--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,10 +1,10 @@
 steps:
   # Build the container image
   - name: "gcr.io/cloud-builders/docker"
-    args: ["build", "-t", "asia-northeast1-docker.pkg.dev/$PROJECT_ID/jankenmaker2:$COMMIT_SHA", "."]
+    args: ["build", "-t", "asia-northeast1-docker.pkg.dev/$PROJECT_ID/jankenmaker2-repo/jankenmaker2:$COMMIT_SHA", "."]
   # Push the container image to Container Registry
   - name: "gcr.io/cloud-builders/docker"
-    args: ["push", "asia-northeast1-docker.pkg.dev/$PROJECT_ID/jankenmaker2:$COMMIT_SHA"]
+    args: ["push", "asia-northeast1-docker.pkg.dev/$PROJECT_ID/jankenmaker2-repo/jankenmaker2:$COMMIT_SHA"]
   # Deploy container image to Cloud Run
   - name: "gcr.io/google.com/cloudsdktool/cloud-sdk"
     entrypoint: gcloud
@@ -13,8 +13,8 @@ steps:
       - "deploy"
       - "jankenmaker2"
       - "--image"
-      - "asia-northeast1-docker.pkg.dev/$PROJECT_ID/jankenmaker2:$COMMIT_SHA"
+      - "asia-northeast1-docker.pkg.dev/$PROJECT_ID/jankenmaker2-repo/jankenmaker2:$COMMIT_SHA"
       - "--region"
       - "asia-northeast1"
 images:
-  - "asia-northeast1-docker.pkg.dev/$PROJECT_ID/jankenmaker2:$COMMIT_SHA"
+  - "asia-northeast1-docker.pkg.dev/$PROJECT_ID/jankenmaker2-repo/jankenmaker2:$COMMIT_SHA"
