--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,7 +5,7 @@ steps:
       - "--no-cache"
       - "-t"
       - >-
-        asia-northeast1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/$REPO_NAME/janken:$COMMIT_SHA
+        asia-northeast1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/$REPO_NAME/jankenmaker2:$COMMIT_SHA
       - .
       - "-f"
       - Dockerfile
@@ -14,30 +14,30 @@ steps:
     args:
       - push
       - >-
-        asia-northeast1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/$REPO_NAME/janken:$COMMIT_SHA
+        asia-northeast1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/$REPO_NAME/jankenmaker2:$COMMIT_SHA
     id: Push
   - name: "gcr.io/google.com/cloudsdktool/cloud-sdk:slim"
     entrypoint: "bash"
     args:
       - "-c"
       - |
-        gcloud run services describe janken --format export --region=asia-northeast1 > service.yaml
+        gcloud run services describe scraps --format export --region=asia-northeast1 > service.yaml
     id: ExportServiceConfig
   - name: "gcr.io/google.com/cloudsdktool/cloud-sdk:slim"
     entrypoint: "bash"
     args:
       - "-c"
       - |
-        sed -i 's|'"asia-northeast1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/$REPO_NAME/janken"':[^\"]*|'"asia-northeast1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/$REPO_NAME/janken:$COMMIT_SHA"'|g' service.yaml
+        sed -i 's|'"asia-northeast1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/$REPO_NAME/jankenmaker2"':[^\"]*|'"asia-northeast1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/$REPO_NAME/jankenmaker2:$COMMIT_SHA"'|g' service.yaml
         gcloud run services replace service.yaml --region=asia-northeast1
     id: UpdateImageTagAndDeploy
 
 images:
   - >-
-    asia-northeast1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/$REPO_NAME/janken:$COMMIT_SHA
+    asia-northeast1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/$REPO_NAME/jankenmaker2:$COMMIT_SHA
 options:
   substitutionOption: ALLOW_LOOSE
 tags:
   - gcp-cloud-build-deploy-cloud-run
   - gcp-cloud-build-deploy-cloud-run-managed
-  - janken-app
+  - jankenmaker2-app
