--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -28,7 +28,9 @@ steps:
     args:
       - "-c"
       - |
+        cat service.yaml
         sed -i 's|'"asia-northeast1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/$REPO_NAME/jankenmaker2"':[^\"]*|'"asia-northeast1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/$REPO_NAME/jankenmaker2:$COMMIT_SHA"'|g' service.yaml
+        cat service.yaml
         gcloud run services replace service.yaml --region=asia-northeast1
     id: UpdateImageTagAndDeploy
 
