--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -29,7 +29,7 @@ steps:
       - "-c"
       - |
         cat service.yaml
-        sed -i 's|'"asia-northeast1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/$REPO_NAME/jankenmaker2@sha256"':[^\"]*|'"asia-northeast1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/$REPO_NAME/jankenmaker2:$COMMIT_SHA"'|g' service.yaml
+        sed -i 's|'"asia-northeast1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/$REPO_NAME/jankenmaker2@sha256"':[^ ]*|'"asia-northeast1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/$REPO_NAME/jankenmaker2:$COMMIT_SHA"'|g' service.yaml
         cat service.yaml
         gcloud run services replace service.yaml --region=asia-northeast1
     id: UpdateImageTagAndDeploy
